--- a/theme/package.json
+++ b/theme/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "understrap-child",
-  "version": "0.5.0",
-  "description": "Basic Child Theme for UnderStrap Theme Framework: https://github.com/holger1411/understrap",
+  "name": "The Vera Project 2018",
+  "version": "alpha",
+  "description": "2018 Redesign of The Vera Project's website",
   "main": "index.js",
   "scripts": {
     "postinstall": "gulp copy-assets"
@@ -10,14 +10,13 @@
     "type": "git",
     "url": "https://github.com/holger1411/understrap-child.git"
   },
-    "keywords": [
+  "keywords": [
     "wordpress",
     "theme",
     "framework",
     "bootstrap",
     "underscores"
   ],
-
   "author": "Holger Koenemann",
   "license": "GPL-2.0",
   "bugs": {
@@ -52,5 +51,4 @@
     "undescores-for-npm": "^1.0.0",
     "understrap": "^0.8.0"
   }
-    
 }
