--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,9 @@
 .sass-cache
-
-bower_components
-
-node_modules
-
+bower_components/
+node_modules/
 understrap.zip
-
-dist
-
-dist-product
-
+dist/
+dist-product/
 npm-debug.log
-
-/vendor/
+vendor/
+package-lock.json
