--- a/package.json
+++ b/package.json
@@ -22,33 +22,33 @@
   "homepage": "https://understrap.com",
   "dependencies": {
     "bootstrap": "4.1.3",
-    "browser-sync": "^2.24.7",
-    "del": "^3.0.0",
-    "font-awesome": "^4.7.0",
-    "fs-extra": "^7.0.0",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.10.0",
-    "gulp-clone": "^1.1.4",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-ignore": "^2.0.2",
-    "gulp-imagemin": "^4.0.0",
-    "gulp-merge": "^0.1.1",
-    "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-replace": "^0.6.1",
-    "gulp-rimraf": "^0.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sequence": "^0.4.6",
+    "browser-sync": "2.26.3",
+    "del": "3.0.0",
+    "font-awesome": "4.7.0",
+    "fs-extra": "7.0.1",
+    "gulp": "3.9.1",
+    "gulp-clean-css": "3.10.0",
+    "gulp-clone": "1.1.4",
+    "gulp-concat": "2.6.1",
+    "gulp-cssnano": "2.1.3",
+    "gulp-ignore": "2.0.2",
+    "gulp-imagemin": "4.1.0",
+    "gulp-merge": "0.1.1",
+    "gulp-plumber": "1.2.1",
+    "gulp-rename": "1.4.0",
+    "gulp-replace": "0.6.1",
+    "gulp-rimraf": "0.2.2",
+    "gulp-sass": "3.2.1",
+    "gulp-sequence": "0.4.6",
     "gulp-sourcemaps": "2.6.2",
-    "gulp-uglify": "^3.0.1",
-    "gulp-watch": "^4.3.11",
-    "merge2": "^1.2.2",
-    "mysql": "^2.16.0",
-    "popper.js": "^1.14.4",
-    "run-sequence": "^2.2.1",
-    "tar-fs": "^1.16.3",
-    "understrap": "^0.8.7",
-    "undescores-for-npm": "^1.0.0"
+    "gulp-uglify": "3.0.1",
+    "gulp-watch": "4.3.11",
+    "merge2": "1.2.3",
+    "mysql": "2.16.0",
+    "popper.js": "1.14.6",
+    "run-sequence": "2.2.1",
+    "tar-fs": "1.16.3",
+    "understrap": "0.8.8",
+    "undescores-for-npm": "1.0.0"
   }
 }
